Small header and footer spacing fix on mobile

--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,5 +1,5 @@
 .post {
-    padding: 25px 0 15px;
+    padding-top: 25px;
 
     h1.post-title {
         color: $grey1;
