--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -8,7 +8,7 @@
     position: relative;
 
     @media screen and (max-width: $mobile) {
-        padding: 58px 0 0;
+        padding: 30px 0 0;
         text-align: center;
     }
 
